--- a/index.html
+++ b/index.html
@@ -1,79 +1,77 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Newsletter : Softtek Newsletter">
+    <title>Newsletter by VinceHu</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Newsletter</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Newsletter</h1>
+        <p>Softtek Newsletter</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/VinceHu/Newsletter">View on GitHub</a>
+        <p class="view"><a href="https://github.com/VinceHu/edm-template">View the Project on GitHub <small>VinceHu/edm-template</small></a></p>
 
-          <h1 id="project_title">Newsletter</h1>
-          <h2 id="project_tagline">Softtek Newsletter</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/VinceHu/Newsletter/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/VinceHu/Newsletter/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <ul>
+          <li><a href="https://github.com/VinceHu/edm-template/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/VinceHu/edm-template/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/VinceHu/edm-template">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
+        <h1>
+<a id="edm-邮件营销的htmlcss-点滴" class="anchor" href="#edm-%E9%82%AE%E4%BB%B6%E8%90%A5%E9%94%80%E7%9A%84htmlcss-%E7%82%B9%E6%BB%B4" aria-hidden="true"><span class="octicon octicon-link"></span></a>EDM 邮件营销的html&amp;css 点滴</h1>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<blockquote>
+<p>最近公司每个月都会制作公司的Newsletter，发送给客户做edm营销。记得第一家公司每周都会做edm，也是自己工作的一个重要部分。做的当中会发现有很多坑，很多css属性不支持，各个邮件服务器的显示上也会存在很多的差异，所以在这里把这些记录下来</p>
+</blockquote>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="edm-html设计规范" class="anchor" href="#edm-html%E8%AE%BE%E8%AE%A1%E8%A7%84%E8%8C%83" aria-hidden="true"><span class="octicon octicon-link"></span></a>edm html设计规范</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<ol>
+<li>宽度保持在600到800px范围</li>
+<li>
+<p>html布局请使用表格布局，居中排版</p>
 
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+<div class="highlight highlight-html"><pre>&lt;<span class="pl-ent">table</span> <span class="pl-e">width</span>=<span class="pl-s1"><span class="pl-pds">"</span>100%<span class="pl-pds">"</span></span> <span class="pl-e">cellpadding</span>=<span class="pl-s1"><span class="pl-pds">"</span>0<span class="pl-pds">"</span></span> <span class="pl-e">cellspacing</span>=<span class="pl-s1"><span class="pl-pds">"</span>0<span class="pl-pds">"</span></span> <span class="pl-e">border</span>=<span class="pl-s1"><span class="pl-pds">"</span>0<span class="pl-pds">"</span></span>&gt;
+&lt;<span class="pl-ent">tbody</span>&gt;
+  &lt;<span class="pl-ent">tr</span>&gt;
+    &lt;<span class="pl-ent">td</span>&gt;
+      &lt;<span class="pl-ent">table</span> <span class="pl-e">width</span>=<span class="pl-s1"><span class="pl-pds">"</span>750<span class="pl-pds">"</span></span> <span class="pl-e">align</span>=<span class="pl-s1"><span class="pl-pds">"</span>center<span class="pl-pds">"</span></span> <span class="pl-e">cellpadding</span>=<span class="pl-s1"><span class="pl-pds">"</span>0<span class="pl-pds">"</span></span> <span class="pl-e">cellspacing</span>=<span class="pl-s1"><span class="pl-pds">"</span>0<span class="pl-pds">"</span></span> <span class="pl-e">border</span>=<span class="pl-s1"><span class="pl-pds">"</span>0<span class="pl-pds">"</span></span>&gt;
+        &lt;<span class="pl-ent">tbody</span>&gt;
+            &lt;<span class="pl-ent">tr</span>&gt;
+                &lt;<span class="pl-ent">td</span>&gt;EDM 内容区域&lt;/<span class="pl-ent">td</span>&gt;
+            &lt;/<span class="pl-ent">tr</span>&gt;
+        &lt;/<span class="pl-ent">tbody</span>&gt;
+      &lt;/<span class="pl-ent">table</span>&gt;
+    &lt;/<span class="pl-ent">td</span>&gt;
+  &lt;/<span class="pl-ent">tr</span>&gt;
+&lt;/<span class="pl-ent">tbody</span>&gt;
+&lt;/<span class="pl-ent">table</span>&gt;</pre></div>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p><a href="http://jsfiddle.net/vincehu/8mez2ztt/">demo</a>    </p>
+</li>
+<li><p>html使用<code>utf—8</code> 编码</p></li>
+<li> html代码中不能包含<code>JavaScript</code> 和 <code>Flash</code>
+</li>
+</ol>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Newsletter maintained by <a href="https://github.com/VinceHu">VinceHu</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/VinceHu">VinceHu</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
